spring security, форма авторизации, регистрации, шифрование пароля

--- a/src/main/webapp/resources/css/register-style.css
+++ b/src/main/webapp/resources/css/register-style.css
@@ -2,12 +2,12 @@ h1 {
     text-align: center;
     color: #d66bf9;
 }
-.error-login {
+.error-register {
     text-align: center;
     color: red;
 }
 table {
-    color: #6ae295;
+    color: #152fe2;
     margin: auto;
 }
 button {
