--- a/src/main/webapp/resources/css/header-style.css
+++ b/src/main/webapp/resources/css/header-style.css
@@ -4,21 +4,22 @@
     background-image: url(../img/background-0.jpg);
     background-color: blueviolet;
     width: 100%;
-    height: 15%;
+    height: 10%;
+    margin-top: -3px;
 
 }
 .header-title {
     float: left;
     clear: none;
     color: orange;
-    font-size: 50px;
+    font-size: 45px;
     padding-left: 30px;
-    padding-top: 10px;
 }
+
 .logout-block {
     float: right;
     padding-right: 20px;
-    padding-top: 10px;
+    padding-top: 8px;
 }
 .logout-block input {
     background-color: cornflowerblue;
@@ -33,19 +34,17 @@
     color: azure;
 }
 
-.logout-block .registerLink {
+.logout-block .registrlink {
     float: right;
     color: mediumspringgreen;
-}
-.logout-block .adminLink {
-    float: right;
-    color: #fac3b5;
+    margin-top: -5px;
 }
 
 .logout-block .prof {
     color: #0ff945;
     padding-right: 10px;
 }
+
 
 .main-menu {
    float: left;
@@ -77,3 +76,15 @@
 .main-menu a:hover {
     background-color: mediumorchid;
 }
+.adminpanel {
+    float: right;
+    clear: right;
+    padding-right: 20px;
+    padding-top: 5px;
+}
+.adminpanel a{
+    padding-bottom: 5px;
+    padding-left: 10px;
+    color: #fffa47;
+}
+
