--- a/src/main/webapp/resources/css/admin/admin.css
+++ b/src/main/webapp/resources/css/admin/admin.css
@@ -9,3 +9,9 @@ h1{
     padding-left: 30px;
     color: #0a13e2;
 }
+.addTable{
+    border:1px solid #5b5b5b;
+}
+.addTable caption{
+    color: #9c09fa;
+}
