--- a/src/main/webapp/resources/css/lightshow/fragments/conteiner2.css
+++ b/src/main/webapp/resources/css/lightshow/fragments/conteiner2.css
@@ -1,10 +1,37 @@
 .show-container2{
     float: left;
     width: 100%;
-    height: 21%;
+    height: 30%;
     margin-top: 1px;
     margin-bottom: 2px;
     background-color: #b8c3c0;
+    border: 1px solid #0a13e2;
+}
+.show-length{
+    float: left;
+    width: 99.8%;
+    height: 15%;
+    border: 1px solid #0a13e2;
+}
+.show-length-btn{
+    float: right;
+    margin-right: 5px;
+}
+.show-length-btn button img{
+    width: 24px;
+    height: 24px;
+}
+.show-content{
+    float: left;
+    width: 99.8%;
+    height: 60%;
+    border: 1px solid #0a13e2;
+    background-color: rgb(175, 175, 173);
+}
+.show-audio{
+    float: left;
+    width: 99.8%;
+    height: 35%;
     border: 1px solid #0a13e2;
 
 }
