--- a/src/main/webapp/resources/css/lightshow/fragments/conteiner1.css
+++ b/src/main/webapp/resources/css/lightshow/fragments/conteiner1.css
@@ -47,7 +47,7 @@
     color: #9818b7;
 }
 .show-container1 .leds-value{
-    color: #b618e8;
+    color: #a457a9;
 }
 .show-container1 .leds select, .leds-input{
     background-color: #cacaca;
@@ -87,12 +87,12 @@
     background-color: #c0abd6;
     color: rgb(101, 5, 140);
     font-size: 18px;
-
+    margin-bottom: 3px;
 }
 
 .show-container1 .play-show{
     border: 1px solid #0a13e2;
-    margin-top: 3px;
+    margin-top: 1px;
 }
 .show-container1 .play-show .play-show-title{
     padding-left: 40%;
