--- a/src/main/webapp/resources/css/lightshow/fragments/conteiner1.css
+++ b/src/main/webapp/resources/css/lightshow/fragments/conteiner1.css
@@ -14,6 +14,12 @@
     color: #670298;
     padding-right: 10px;
 }
+
+.show-container1 .dragAndDrop{
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
 .show-container1 .show-name{
     float: left;
     width: 100%;
@@ -36,7 +42,7 @@
 }
 
 .show-container1 .leds{
-    height: 52%;
+    height: 53%;
 }
 
 .show-container1 .leds .title{
@@ -56,7 +62,7 @@
 .show-container1 .leds select{
     width: 50px;
 }
-.show-container1 .leds input[type="color"]{
+.show-container1 .leds .led-color{
     width: 100px;
 }
 .show-container1 .leds input[type="checkbox"]{
@@ -82,7 +88,7 @@
 }
 
 .show-container1 .effects input[type="button"], #saveshow{
-    margin-top: 5px;
+    margin-top: 2px;
     height: 35px;
     background-color: #c0abd6;
     color: rgb(101, 5, 140);
@@ -92,7 +98,7 @@
 
 .show-container1 .play-show{
     border: 1px solid #0a13e2;
-    margin-top: 1px;
+    margin-top: 2px;
 }
 .show-container1 .play-show .play-show-title{
     padding-left: 40%;
@@ -122,6 +128,8 @@
 
 #createEffectsModal label{
     color: #9818b7;
+    text-align: center;
+    font-size: 20px;
 }
 #createEffectsModal input[type="text"]{
     color: #0a13e2;
@@ -131,4 +139,12 @@
     margin-top: 10px;
     color: #fffbfd;
     background-color: #0a13e2;
+}
+#nameEffectLabel{
+    margin-right: 3px;
+}
+.nameEffect-color{
+    width: 5%;
+    padding: 0;
+    margin: 0;
 }
